# skills

skills/000sonic/frontend-skill-1-0-1/: _meta.json
skills/000sonic/local-file-manager-1-0-0/: _meta.json
skills/0marwalied/carsxe/: _meta.json
skills/0xagata-prog/cybergfai/: _meta.json
skills/0xarkstar/notion-cli-mcp/: _meta.json
skills/0xartex/agents-infra/: _meta.json
skills/0xautonomys/permanent-memory/: _meta.json
skills/0xbeekeeper/security/: _meta.json
skills/0xcjl/browser-cdp/: _meta.json
skills/0xcjl/slowmist-security-cc/: _meta.json
skills/0xduraku/iseclaw-intel/: _meta.json
skills/0xfantommenace/0xarchive/: _meta.json
skills/0xichigo/helius/: _meta.json
skills/0xjaspreet/wger-fitness/: _meta.json
skills/0xjaspreet/wger-openclaw/: _meta.json
skills/1052326311/session-guardian/: _meta.json
skills/1052666/mcdonalds-skill/: _meta.json
skills/1054570699/fsagent-creator/: _meta.json
skills/1103-ss/a2a-match/: CHANGELOG.md  CONTRIBUTING.md  README.md  SKILL.md  _commit_msg.txt  _git_commit.py  _meta.json  deploy_server.py  requirements.txt  skill.json  test_match.py
skills/117788abc/clawtip/: _meta.json
skills/robinmtzieme-commits/zim/: SKILL.md  _meta.json  pyproject.toml
skills/robinmtzieme-commits/zim/scripts/: search-cars.sh  search-hotels.sh
skills/robinmtzieme-commits/zim/tests/: test_booking_executor.py
skills/robinmtzieme-commits/zim/zim/: __init__.py  airports.py  booking_executor.py  car_search.py  flight_search.py  hotel_search.py  payment.py
skills/robinmtzieme-commits/zim/zim/providers/: travelpayouts.py
(+12310 files in other folders)
