[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zim"
version = "0.1.1"
description = "Agent travel middleware — search, assemble, and book travel with policy awareness"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT-0"}
dependencies = [
    "pydantic>=2.0",
    "click>=8.0",
    "httpx>=0.25",
    "python-dateutil",
    "stripe>=8.0",
]

[project.scripts]
zim = "zim.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "respx>=0.21",
]

[tool.setuptools.packages.find]
include = ["zim*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
